// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsible /> defaultActiveKey 1`] = `
<Collapsible
  accordion={true}
  defaultActiveKey={0}
>
  <ul
    className="collapsible"
    data-collapsible="accordion"
  >
    <CollapsibleItem
      expanded={false}
      header="First"
      key=".0"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          First
        </div>
        <div
          className="collapsible-body"
        >
          A
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="Second"
      key=".1"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          Second
        </div>
        <div
          className="collapsible-body"
        >
          B
        </div>
      </li>
    </CollapsibleItem>
  </ul>
</Collapsible>
`;

exports[`<Collapsible /> defaultActiveKey 2`] = `
<Collapsible
  accordion={true}
  defaultActiveKey={0}
>
  <ul
    className="collapsible"
    data-collapsible="accordion"
  >
    <CollapsibleItem
      expanded={false}
      header="First"
      key=".0"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          First
        </div>
        <div
          className="collapsible-body"
        >
          A
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="Second"
      key=".1"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          Second
        </div>
        <div
          className="collapsible-body"
        >
          B
        </div>
      </li>
    </CollapsibleItem>
  </ul>
</Collapsible>
`;

exports[`<Collapsible /> expandable 1`] = `
<Collapsible
  accordion={false}
>
  <ul
    className="collapsible expandable"
    data-collapsible="expandable"
  />
</Collapsible>
`;

exports[`<Collapsible /> renders 1`] = `
<Collapsible
  accordion={true}
>
  <ul
    className="collapsible"
    data-collapsible="accordion"
  />
</Collapsible>
`;

exports[`<Collapsible /> updates activeKey 1`] = `
<Collapsible
  accordion={true}
>
  <ul
    className="collapsible"
    data-collapsible="accordion"
  >
    <CollapsibleItem
      expanded={false}
      header="A"
      key=".0"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          A
        </div>
        <div
          className="collapsible-body"
        >
          A
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="B"
      key=".1"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          B
        </div>
        <div
          className="collapsible-body"
        >
          B
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="C"
      key=".2"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          C
        </div>
        <div
          className="collapsible-body"
        >
          C
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="D"
      key=".3"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          D
        </div>
        <div
          className="collapsible-body"
        >
          D
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="E"
      key=".4"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          E
        </div>
        <div
          className="collapsible-body"
        >
          E
        </div>
      </li>
    </CollapsibleItem>
  </ul>
</Collapsible>
`;

exports[`<Collapsible /> updates activeKey 2`] = `
<Collapsible
  accordion={true}
>
  <ul
    className="collapsible"
    data-collapsible="accordion"
  >
    <CollapsibleItem
      expanded={false}
      header="A"
      key=".0"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          A
        </div>
        <div
          className="collapsible-body"
        >
          A
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="B"
      key=".1"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          B
        </div>
        <div
          className="collapsible-body"
        >
          B
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="C"
      key=".2"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          C
        </div>
        <div
          className="collapsible-body"
        >
          C
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="D"
      key=".3"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          D
        </div>
        <div
          className="collapsible-body"
        >
          D
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="E"
      key=".4"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          E
        </div>
        <div
          className="collapsible-body"
        >
          E
        </div>
      </li>
    </CollapsibleItem>
  </ul>
</Collapsible>
`;

exports[`<Collapsible /> with expanded prop 1`] = `
<Collapsible
  accordion={true}
>
  <ul
    className="collapsible"
    data-collapsible="accordion"
  >
    <CollapsibleItem
      expanded={true}
      header="First"
      key=".0"
      node="div"
      onSelect={[Function]}
    >
      <li
        className="active"
      >
        <div
          className="collapsible-header active"
          onClick={[Function]}
        >
          First
        </div>
        <div
          className="collapsible-body"
        >
          A
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="Second"
      key=".1"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          Second
        </div>
        <div
          className="collapsible-body"
        >
          B
        </div>
      </li>
    </CollapsibleItem>
  </ul>
</Collapsible>
`;

exports[`<Collapsible /> with invalid elements 1`] = `
<Collapsible
  accordion={true}
>
  <ul
    className="collapsible"
    data-collapsible="accordion"
  >
    <CollapsibleItem
      expanded={false}
      header="First"
      key=".0"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          First
        </div>
        <div
          className="collapsible-body"
        >
          A
        </div>
      </li>
    </CollapsibleItem>
    <CollapsibleItem
      expanded={false}
      header="Second"
      key=".2"
      node="div"
      onSelect={[Function]}
    >
      <li
        className=""
      >
        <div
          className="collapsible-header"
          onClick={[Function]}
        >
          Second
        </div>
        <div
          className="collapsible-body"
        >
          B
        </div>
      </li>
    </CollapsibleItem>
  </ul>
</Collapsible>
`;
